option(
    'target',
    type : 'combo',
    choices : [
        'ARMCM0_S32K11',
        'ARMCM0_STM32C0',
        'ARMCM0_STM32F0',
        'ARMCM0_STM32G0',
        'ARMCM0_STM32L0',
        'ARMCM0_XMC1',
        'ARMCM3_EFM32',
        'ARMCM3_LM3S',
        'ARMCM3_STM32F1',
        'ARMCM3_STM32F2',
        'ARMCM3_STM32L1',
        'ARMCM33_STM32L5',
        'ARMCM33_STM32U5',
        'ARMCM4_S32K14',
        'ARMCM4_STM32F3',
        'ARMCM4_STM32F4',
        'ARMCM4_STM32G4',
        'ARMCM4_STM32L4',
        #'ARMCM4_TM4C', Compiler not supported by Meson for now
        'ARMCM4_XMC4',
        'ARMCM7_STM32F7',
        'ARMCM7_STM32H7',
        #'HCS12', Compiler not supported by Meson for now
        'TRICORE_TC2',
        'TRICORE_TC3',
    ],
    yield : true
)

option(
    'build_demo',
    type : 'boolean',
    value: false,
    yield : true
)

option(
    'build_on_CI',
    type : 'boolean',
    value: false,
    yield : true
)