project('tinyusb', ['c'], version: '0.17.0')

tinyusb_dep = declare_dependency(
    sources: [
        'src/tusb.c',
        'src/class/audio/audio_device.c',
        'src/class/bth/bth_device.c',
        'src/class/cdc/cdc_device.c',
        'src/class/cdc/cdc_host.c',
        'src/class/cdc/cdc_rndis_host.c',
        'src/class/dfu/dfu_device.c',
        'src/class/dfu/dfu_rt_device.c',
        'src/class/hid/hid_device.c',
        'src/class/hid/hid_host.c',
        'src/class/midi/midi_device.c',
        'src/class/msc/msc_device.c',
        'src/class/msc/msc_host.c',
        'src/class/net/ecm_rndis_device.c',
        'src/class/net/ncm_device.c',
        'src/class/usbtmc/usbtmc_device.c',
        'src/class/vendor/vendor_device.c',
        'src/class/vendor/vendor_host.c',
        'src/class/video/video_device.c',
        'src/common/tusb_fifo.c',
        'src/device/usbd.c',
        'src/device/usbd_control.c',
        'src/host/hub.c',
        'src/host/usbh.c',
        'src/portable/wch/dcd_ch32_usbfs.c',
        'src/portable/wch/dcd_ch32_usbhs.c',
        'src/typec/usbc.c',
    ],
    include_directories: [
        'src',
        'src/class/audio',
        'src/class/bth',
        'src/class/cdc',
        'src/class/dfu',
        'src/class/hid',
        'src/class/midi',
        'src/class/msc',
        'src/class/net',
        'src/class/usbtmc',
        'src/class/vendor',
        'src/class/video',
        'src/common',
        'src/device',
        'src/host',
        'src/osal',
        'src/portable/wch',
        'src/typec',
    ],
)